--- a/success.html
+++ b/success.html
@@ -62,7 +62,7 @@
         <h1>신청이 완료되었습니다!</h1>
         <p>한샘 55주년 특별 이벤트에 참여해주셔서 감사합니다.</p>
         <p>입력해주신 정보는 성공적으로 접수되었으며,</p>
-        <p>특별 할인 쿠폰과 함께 인테리어 상담을 도와드릴 담당자가 곧 연락 드릴 예정입니다.</p>
+        <p>인테리어 상담을 도와드릴 담당자가 곧 연락 드릴 예정입니다.</p>
         <p>잠시만 기다려주세요!</p>
         <a href="https://eunyoung94.github.io/hanssemPocWeb/" class="button">메인 페이지로 돌아가기</a>
     </div>
