--- a/index.html
+++ b/index.html
@@ -116,3 +116,5 @@
                 <label for="company">거주 지역 (시/도)</label>
                 <input id="company" maxlength="40" name="company" size="20" type="text" placeholder="예: 서울, 경기" />
             </div>
+            
+            <input type="submit" name="submit" value="쿠폰받고 인테리어 상담 신청하기">
