--- a/campaign.html
+++ b/campaign.html
@@ -84,6 +84,20 @@
             max-width: 150px;
             height: auto;
         }
+        .button {
+            display: inline-block;
+            padding: 15px 30px;
+            background-color: #FF6B00;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 1.2em;
+            transition: background-color 0.3s ease;
+            font-weight: bold;
+        }
+        .button:hover {
+            background-color: #E65A00;
+        }
     </style>
 </head>
 <body>
@@ -98,3 +112,4 @@
             <input type=hidden name="retURL" value="https://eunyoung94.github.io/hanssemPocWeb/success.html"> 
             
             <a href="webToLead.html" class="button">인테리어 상담 신청하기</a>
+            <p style="margin-top: 20px;">*더 자세한 정보는 아래에서 확인하실 수 있습니다.</p>
