--- a/success.html
+++ b/success.html
@@ -43,7 +43,7 @@
         }
         .button {
             display: inline-block;
-            background-color: #d12a2a;
+            background-color: #d12a2a;;
             color: white;
             padding: 12px 25px;
             border-radius: 5px;
@@ -64,7 +64,7 @@
         <p>입력해주신 정보는 성공적으로 접수되었으며,</p>
         <p>인테리어 상담을 도와드릴 담당자가 곧 연락 드릴 예정입니다.</p>
         <p>잠시만 기다려주세요!</p>
-        <a href="https://eunyoung94.github.io/hanssemPocWeb/" class="button">메인 페이지로 돌아가기</a>
+        <a href="https://eunyoung94.github.io/hanssemPocWeb/campaign.html" class="button">메인 페이지로 돌아가기</a>
     </div>
 </body>
 </html>
