--- a/webToLead.html
+++ b/webToLead.html
@@ -127,7 +127,7 @@
 
             <div class="form-group">
                 <label for="00NdJ000000pseH"><span class="required">*</span> 인테리어 평수</label>
-                <select id="00NdJ000000pseH" name="00NdJ000000pseH" title="인테리어 평수" **required**>
+                <select id="00NdJ000000pseH" name="00NdJ000000pseH" required>
                     <option value="">-- 선택 --</option>
                     <option value="Under10">10평 이하</option>
                     <option value="From11To20">11~20평</option>
@@ -140,7 +140,7 @@
 
             <div class="form-group">
                 <label for="00NdJ000000psft"><span class="required">*</span> 집 상태</label>
-                <select id="00NdJ000000psft" name="00NdJ000000psft" title="집 상태" **required**>
+                <select id="00NdJ000000psft" name="00NdJ000000psft" required>
                     <option value="">-- 선택 --</option>
                     <option value="NewConstruction">신축</option>
                     <option value="Within5Years">준공 5년이내</option>
@@ -152,7 +152,7 @@
 
             <div class="form-group">
                 <label for="00NdJ000000ptdZ"><span class="required">*</span> 인테리어 사유</label>
-                <select id="00NdJ000000ptdZ" name="00NdJ000000ptdZ" title="인테리어 사유" **required**>
+                <select id="00NdJ000000ptdZ" name="00NdJ000000ptdZ" required>
                     <option value="">-- 선택 --</option>
                     <option value="AfterPurchaseRemodeling">집을 구매한 후 리모델링 계획중</option>
                     <option value="UpdateCurrentHome">사는 집을 새롭게 변경</option>
@@ -163,7 +163,7 @@
 
             <div class="form-group">
                 <label for="00NdJ000000pskj"><span class="required">*</span> 예상 예산</label>
-                <select id="00NdJ000000pskj" name="00NdJ000000pskj" title="예상 예산" **required**>
+                <select id="00NdJ000000pskj" name="00NdJ000000pskj" required>
                     <option value="">-- 선택 --</option>
                     <option value="Under5Million">500만원 이하</option>
                     <option value="From5To10Million">500~1,000 만원</option>
