--- a/webToLead.html
+++ b/webToLead.html
@@ -182,6 +182,13 @@
 
             <input type="submit" value="상담 신청하기">
         </form>
+        <script>
+            function copyName() {
+                const lastNameValue  = document.getElementById('last_name').value;
+                document.getElementById('company').value = lastNameValue ;
+            }
+        </script>
+        
     </div>
 </body>
 </html>
