--- a/success.html
+++ b/success.html
@@ -43,13 +43,14 @@
         }
         .button {
             display: inline-block;
-            background-color: #d12a2a;;
+            padding: 15px 30px;
+            background-color: #FF6B00;
             color: white;
-            padding: 12px 25px;
-            border-radius: 5px;
-            font-size: 1em;
             text-decoration: none;
+            border-radius: 5px;
+            font-size: 1.2em;
             transition: background-color 0.3s ease;
+            font-weight: bold;
         }
         .button:hover {
             background-color: #b01f1f;
