--- a/webToLead.html
+++ b/webToLead.html
@@ -106,6 +106,17 @@
             </div>
 
             <div class="form-group">
+                <label for="state"><span class="required">*</span> 시</label>
+                <input id="state" maxlength="40" name="state"  placeholder="서울시" required />
+            </div>
+            <!-- 광진구 -->
+            <div class="form-group">
+                <label for="city"><span class="required">*</span> 구</label>
+                <input id="city" maxlength="40" name="city"  placeholder="강동구" required />
+            </div>
+            
+            
+            <div class="form-group">
                 <label for="00NdJ000000psmL"><span class="required">*</span> 시작 희망 시점</label>
                 <select id="00NdJ000000psmL" name="00NdJ000000psmL" required>
                     <option value="Within1Month">1개월 이내</option>
