--- a/webToLead.html
+++ b/webToLead.html
@@ -107,12 +107,12 @@
             
             <div class="form-group">
                 <label for="state"><span class="required">*</span> 시</label>
-                <input id="state" maxlength="40" name="state"  placeholder="서울시" required />
+                <input id="state" maxlength="40" name="state"  type="text" placeholder="서울시" required />
             </div>
             <!-- 광진구 -->
             <div class="form-group">
                 <label for="city"><span class="required">*</span> 구</label>
-                <input id="city" maxlength="40" name="city"  placeholder="강동구" required />
+                <input id="city" maxlength="40" name="city"  type="text" placeholder="강동구" required />
             </div>
             
             <div class="form-group">
