--- a/webToLead.html
+++ b/webToLead.html
@@ -181,7 +181,7 @@
             
             <div class="form-group" style="text-align: center;">
                 <label>
-                    <input id="00NdJ000000psb3" name="00NdJ000000psb3" type="checkbox" value="1" required/>
+                    <input id="00NdJ000000psb3" name="00NdJ000000psb3" type="checkbox" value="1"  checked required/>
                     <span class="required">*</span> 개인정보 수집 동의
                 </label>
             </div>
