--- a/webToLead.html
+++ b/webToLead.html
@@ -95,6 +95,7 @@
             <input type="hidden" name="oid" value="00DJP000001UwfZ">
             <input type="hidden" name="retURL" value="https://eunyoung94.github.io/hanssemPocWeb/success.html">
             <input type="hidden" name="lead_source" value="HanssemMall">
+            <input type="hidden" name="00NdJ000000ptyX" value="Offline">
             
             <div class="form-group">
                 <label for="last_name"><span class="required">*</span> 이름</label>
